--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="footer">
       <span>© 2025 UDI. All rights reserved.</span>
       <span>│</span>
-      <span>contact@updowninfinity.xyz</span>
+      <span>contact@udi.ninja</span>
     </div>
   </div>
 
@@ -172,7 +172,7 @@
     <div class="footer">
       <span>© 2025 UDI. All rights reserved.</span>
       <span>│</span>
-      <span>contact@updowninfinity.xyz</span>
+      <span>contact@udi.ninja</span>
     </div>
   </div>
 
