--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <!-- SCREEN ENTER CODE -->
   <div class="password-screen" id="passwordScreen">
     <div class="pass-container">
-      <img src="infinity.png" alt="UDI" class="pass-logo">
+      <img src="Infeeno.png" alt="UDI" class="pass-logo">
       <input type="text" inputmode="text" maxlength="8" id="passInput" placeholder="Enter Code..." autocomplete="off">
       <div class="pass-error" id="passError">Invalid or already used code!</div>
     </div>
@@ -151,7 +151,7 @@
 
   <!-- MAIN FORM -->
   <div class="container" id="mainForm" style="display:none;">
-    <img src="Loon.gif" alt="UDI" class="logo">
+    <img src="Unseal.png" alt="UDI" class="logo">
 
     <div style="margin: 8px 0;">
       <input type="text" id="twitter" placeholder="@yourX" class="compact-input">
