--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     *, *::before, *::after { box-sizing: border-box; }
     html, body { margin:0; padding:0; height:100%; width:100%; overflow-x:hidden; }
     body {
-      background: #Fd8c00;
+      background: #fd8c00;
       color: white;
       min-height: 100vh;
       display: flex;
