--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     .password-screen {
       position: fixed;
       inset: 0;
-      background: #Fd8c00;
+      background: #fd8c00;
       display: flex;
       align-items: center;
       justify-content: center;
