--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     <div class="form-elements" id="formElements">
       <div class="instructions">
-        Complete all steps to be eligible for the Whitelist
+        Make sure completed all steps to be eligible for the Whitelist
       </div>
 
       <div style="margin: 8px 0;">
@@ -286,7 +286,7 @@
       </div>
 
       <div style="margin: 8px 0;">
-        <input type="text" id="retweetLink" placeholder="your retweet link..." class="compact-input">
+        <input type="text" id="retweetLink" placeholder="ur udi comment link" class="compact-input">
       </div>
 
       <div class="checkbox-group">
