--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       </div>
 
       <div style="margin: 8px 0;">
-        <input type="text" id="twitter" placeholder="@username" class="compact-input">
+        <input type="text" id="twitter" placeholder="@username..." class="compact-input">
       </div>
 
       <div style="margin: 8px 0;">
@@ -286,7 +286,7 @@
       </div>
 
       <div style="margin: 8px 0;">
-        <input type="text" id="retweetLink" placeholder="ur udi comment link" class="compact-input">
+        <input type="text" id="retweetLink" placeholder="...udi comment link" class="compact-input">
       </div>
 
       <div class="checkbox-group">
