--- a/index.html
+++ b/index.html
@@ -323,9 +323,9 @@
     
     // === X LINKS ===
     const X_LINKS = {
-    LIKE:    "https://x.com/udininja/status/1234567890123456789",
-    RETWEET: "https://x.com/udininja/status/9876543210987654321",
-    FOLLOW:  "https://x.com/udininja",
+    LIKE:    "https://x.com/udininja?s=21",
+    RETWEET: "https://x.com/udininja?s=21",
+    FOLLOW:  "https://x.com/udininja?s=21",
     };
     const passwordScreen = document.getElementById('passwordScreen');
     const mainForm       = document.getElementById('mainForm');
