--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       </div>
 
       <div style="margin: 8px 0;">
-        <input type="text" id="retweetLink" placeholder="...udi comment link" class="compact-input">
+        <input type="text" id="retweetLink" placeholder="your "udi" comment link" class="compact-input">
       </div>
 
       <div class="checkbox-group">
