--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 <script>
   const PASSWORD = 'tridy';
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwqOQBmy5JighmyWMLijzMiVswlgoQta_wQZ3020BwZj9XIYoMMV5mXAaHRvLlA53ts/exec';
-  const X_URL = 'https://x.com';
+  const X_URL = 'https://x.com/udininja';
 
   const completed = { like:false, retweet:false, follow:false };
 
