--- a/index.html
+++ b/index.html
@@ -294,12 +294,15 @@
       Make sure you complete all steps to be eligible for the Whitelist
     </div>
 
-    <input id="twitter" class="compact-input" placeholder="@username...">
-    <br>
-    <input id="wallet" class="compact-input" placeholder="0x...eth)">
-    <br>
-    <input id="retweetLink" class="compact-input" placeholder="your 'udi' comment link">
-
+  <div style="margin: 8px 0;">
+      <input id="twitter" class="compact-input" placeholder="@username...">
+    </div>
+  <div style="margin: 8px 0;">
+      <input id="wallet" class="compact-input" placeholder="0x...eth">
+    </div>
+  <div style="margin: 8px 0;">
+      <input id="retweetLink" class="compact-input" placeholder="your 'udi' comment link">
+    </div>
     <div class="task-group">
       <div class="task-item">
         <a class="task-link" id="linkLike">Like</a>
